# rss-reader-cli

./: .gitignore  README.md  config.ini.example  cron.example  pyproject.toml
src/: main.py  reader.py
